--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="home_activity_start_service">Start Service</string>
     <string name="home_activity_open_map">Open Map</string>
     <string name="home_activity_stop_mock">Stop Mocking</string>
+    <string name="home_activity_enable_debug">Enable Debug</string>
 
     <!-- HeadService -->
     <string name="topui_inst_first_play">Play!</string>
